# coursework2

./: README.md  hh_data.json  main.py  pyproject.toml
src/: api_module.py  example.json  file_module.py  headhunter_api.py  helper_module.py  vacancy_module.py  vacancy_service.py
tests/: test_api.py  test_file.py  test_head_hunter_api.py  test_vacancy.py
