[project]
name = "coursework2"
version = "0.1.0"
description = ""
authors = [
    {name = "Rustam Abuzyarov",email = "rustamabuzarov56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "coverage (>=7.13.0,<8.0.0)",
    "responses (>=0.25.8,<0.26.0)"
]
[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
  )/
)
'''
[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv, tests"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
